# LoveGuruAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_config.py  test_fix.py  test_memory_extraction.py  test_memory_extraction_improved.py  多智能体改造方案.md
.qoder/skills/loveguru-developer/: SKILL.md
common/: ApiResult.py  ErrorCode.py  constants.py  exceptions.py  response.py  utils.py
common/utils/: DateUtil.py  FileUtil.py  __init__.py
config/: checkpointer.py  database.py  logger.py  settings.py
controller/: chat_controller.py  health_controller.py  vector_controller.py
dao/: __init__.py  base_dao.py  chat_message_dao.py  knowledge_embedding_dao.py  user_memory_dao.py
entity/: __init__.py  chat_message.py  knowledge_embedding.py  user_memory.py
harness/: __init__.py  chain_builder.py  graph_builder.py  prompt_manager.py
services/chat/: chat_service.py  rag_service.py
services/llm/: base_llm.py  factory.py  openai_service.py  qwen_service.py
services/memory/: __init__.py  memory_service.py
services/vector/: __init__.py  pgvector_service.py
sql/: demo.sql
tools/: __init__.py  baidu_map_tool.py  chat_tool.py  date_tool.py  emotion_tool.py  test_map_optimization.py
